# notify-send.py

./: .gitignore  LICENSE  LICENSE_notify2  README.org  README.rst  pyproject.toml  requirements.txt  setup.py
notify_send_py/: __init__.py  notify2.py  notify_send_py.py
notify_send_py/notify3/: __init__.py
scripts/: notify-send.py
